--- a/.devcontainer/devcontainer-orig.json
+++ b/.devcontainer/devcontainer-orig.json
@@ -1,15 +1,23 @@
+// For format details, see https://aka.ms/devcontainer.json. For config options, see the README at:
+// https://github.com/microsoft/vscode-dev-containers/tree/v0.209.6/containers/java
 {
-  "name": "jh-devcontainers",
-  "dockerComposeFile": "./docker-compose.yml",
-  "service": "devcontainer",
-  "workspaceFolder": "/workspace/jh-devcontainers",
+  "name": "JhDevcontainers",
+  "build": {
+    "dockerfile": "Dockerfile",
+    "args": {
+      // Update the VARIANT arg to pick a Java version: 17, 19
+      // Append -bullseye or -buster to pin to an OS version.
+      // Use the -bullseye variants on local arm64/Apple Silicon.
+      "VARIANT": "17-bullseye",
+      // Options
+      // maven and gradle wrappers are used by default, we don't need them installed globally
+      // "INSTALL_MAVEN": "false",
+      // "INSTALL_GRADLE": "true",
+      "NODE_VERSION": "22.15.0"
+    }
+  },
+
   "customizations": {
-    "jetbrains": {
-      "settings": {
-        "com.intellij:app:BuiltInServerOptions.builtInServerPort": 51399,
-        "com.intellij:app:HttpConfigurable.use_proxy_pac": true
-      }
-    },
     "vscode": {
       // Set *default* container specific settings.json values on container create.
       "settings": {
@@ -22,7 +30,7 @@
   },
 
   // Use 'forwardPorts' to make a list of ports inside the container available locally.
-  "forwardPorts": [8081, "consul:8500", "dev-consul:8500", 9080],
+  "forwardPorts": [8081],
 
   // Use 'postCreateCommand' to run commands after the container is created.
   // "postCreateCommand": "java -version",
